refactor(alerts): update maximum page size from 50 to 25
